# backpop

./: .gitignore  README.md  backpop.py  params.ini  pyproject.toml  run_backpop.py  test.py
data/: README.md
docs/: README.md  conf.py  index.rst
docs/_static/: custom.css  custom.js
docs/api/: backpop.files.parse_inifile.rst  backpop.main.BackPop.rst  backpop.phase.Condition.rst  backpop.phase.ConditionGroup.rst  backpop.phase.Not.rst  backpop.phase.add_vsys_from_kicks.rst  backpop.phase.select_phase.rst  backpop.posteriors.BackPopsteriors.rst
docs/modules/: changelog.rst  files.rst  main.rst  phase.rst  posteriors.rst
docs/pages/: cite.rst  getting_started.rst  install.rst  modules.rst  tutorials.rst
docs/pages/tutorials/: tutorials_1.rst  tutorials_2.rst
example_inis/: ce.ini  simple.ini
src/backpop/: __init__.py  cli.py  consts.py  files.py  gw.py  main.py  phase.py  posteriors.py
